--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 stages:
   - test
   - quality_gate
+  - code_coverage
 
 rust:
 
@@ -34,3 +35,11 @@ jobs:
       script:
         - cargo clippy -- -D warnings
         - cargo fmt --all -- --check
+
+    - stage: code_coverage
+      os: linux
+      rust: stable
+      before_script: cargo install cargo-tarpaulin
+      script:
+        - cargo tarpaulin --out Xml
+        - bash <(curl -s https://codecov.io/bash)
